--- a/Jupyter_Assignment.ipynb
+++ b/Jupyter_Assignment.ipynb
@@ -73,7 +73,7 @@
     "**Data science tools** categorized by tasks across life cycle:\n",
     "|Data Management|Data Integration & Transformation|Data Visualization|Model Building & Deployment|Model Monitoring & Assessment|Code Asset Management|Data Asset Management|\n",
     "|---------------|---------------------------------|------------------|---------------------------|-----------------------------|---------------------|---------------------|\n",
-    "|Microsoft SQL Server, Oracle, IBM DB2, MySQL, PostgreSQL, MongoDB, Couch DB, Cassandra, Hadoop HDFS, ceph, ElasticSearch|Informatica, IBM Infosphere Datastage, Oracle, SAAS, Airflow, Kubeflow, Kafka, nifi, Spark SQL, Node-Red| Tableau, Microsoft Power BI, Cognos, HUE, Kibana, Superset|Apache PredictionIO, Seldon, TensorFlow|SPSS Modeler, SAS Enterprise Miner, ModelDB, Prometheus|IBM Adverserial 360, IBM AI Explainability 360| GitHub, GitLab, Bitbucket, Apache Atlas, ODPI EGERIA, kylo|\n",
+    "|Microsoft SQL Server, Oracle, IBM DB2, MySQL, PostgreSQL, MongoDB, Couch DB, Cassandra, Hadoop HDFS, ceph, ElasticSearch|Informatica, IBM Infosphere Datastage, Oracle, SAAS, Airflow, Kubeflow, Kafka, nifi, Spark SQL, NodeRed| Tableau, Microsoft Power BI, Cognos, HUE, Kibana, Superset|Apache PredictionIO, Seldon, TensorFlow|SPSS Modeler, SAS Enterprise Miner, ModelDB, Prometheus|IBM Adverserial 360, IBM AI Explainability 360| GitHub, GitLab, Bitbucket, Apache Atlas, ODPI EGERIA, kylo|\n",
     "\n",
     "|Development Environment| Execution Environment| Fully Integrated Visual Tools|\n",
     "|-----------------------|----------------------|------------------------------|\n",
