--- a/Jupyter_Assignment.ipynb
+++ b/Jupyter_Assignment.ipynb
@@ -4,21 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My Jupyter Notebook Assignment on IBM Watson Studio"
+    "# Data Science Tools and Ecosystem"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Nilesh Kothavade** - Information Technology Manager"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*I am interested in Data Science because I believe vast data pools we have today contain hidden stories and insights that are waiting to be revealed.*"
+    "*In this notebook, Data Science Tools and Ecosystem are summarized.*"
    ]
   },
   {
@@ -88,12 +81,13 @@
    },
    "source": [
     "---\n",
+    "### Below are a few examples of evaluating arithmetic expressions in Python. \n",
     "**Arithmetic expression** is a combination of numeric values & operands that perform mathematical operations on numeric values. eg: 2+7-4 = 5, 2x3x4 = 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,30 +96,32 @@
        "36"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#This a simple arithmetic expression to mutiply then add integers\n",
     "(7+2)*(5-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "320 minutes is 5.33 hours\n"
+      "200 minutes is 3.33 hours\n"
      ]
     }
    ],
    "source": [
-    "mins = 320\n",
+    "#This will convert 200 minutes to hours by diving by 60\n",
+    "mins = 200\n",
     "hrs = round(mins/60, 2)\n",
     "print(str(mins) + \" minutes is \" + str(hrs) + \" hours\") "
    ]
@@ -182,13 +178,19 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Author's name : Nilesh Kothavade"
+    "## Author : \n",
+    "Nilesh Kothavade"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "---\n",
     "|Name    |Country|Interest        |\n",
     "|--------|-------|----------------|\n",
